--- a/lang/de.json
+++ b/lang/de.json
@@ -1,8 +1,8 @@
 {
-	"enhancedcombathud-vaesen" : {
+	"enhancedcombathud-mutant-year-zero" : {
 		"Titles" : {
-			"SlowAction"				: "LANGSAME AKTIONEN",
-			"FastAction"				: "SCHNELLE AKTIONEN",
+			"ActionAction"				: "AKTIONEN",
+			"ManeuverAction"			: "MANEUVER",
 			"ReAction"					: "REAKTIONEN",
 			"Flee"						: "Flüchten",
 			"WPG"						: "Ringen",
@@ -15,28 +15,40 @@
 			"Dodge"						: "Ausweichen",
 			"Parry"						: "Parieren",
 			"BreakFree"					: "Losreißen",
-			"Chase"						: "Verfolgen"
+			"Chase"						: "Verfolgen",
+			"Help"						: "Helfen",
+			"Hinder"					: "Hindern",
+			"Reload"					: "Nachladen",
+			"Defend"					: "Verteidigen"
 		},
 		
 		"Descriptions" : {
-			"Flee"						: "Siehe Vasesen Regelbuch S.62",
-			"WPG"						: "Siehe Vasesen Regelbuch S.62",
-			"Survey"					: "Siehe Vasesen Regelbuch S.62",
-			"TreatInjuries"				: "Siehe Vasesen Regelbuch S.71",
-			"DrawWeapon"				: "Siehe Vasesen Regelbuch S.60",
-			"Standup"					: "Siehe Vasesen Regelbuch S.60",
-			"Move"						: "Siehe Vasesen Regelbuch S.60",
-			"TakeCover"					: "Siehe Vasesen Regelbuch S.73",
-			"Dodge"						: "Siehe Vasesen Regelbuch S.61",
-			"Parry"						: "Siehe Vasesen Regelbuch S.61",
-			"BreakFree"					: "Siehe Vasesen Regelbuch S.62",
-			"Chase"						: "Siehe Vasesen Regelbuch S.62"
+			"Flee"						: "Siehe Mutant Year Zero Regelbuch S.??",
+			"WPG"						: "Siehe Mutant Year Zero Regelbuch S.??",
+			"Survey"					: "Siehe Mutant Year Zero Regelbuch S.??",
+			"TreatInjuries"				: "Siehe Mutant Year Zero Regelbuch S.??",
+			"DrawWeapon"				: "Siehe Mutant Year Zero Regelbuch S.??",
+			"Standup"					: "Siehe Mutant Year Zero Regelbuch S.??",
+			"Move"						: "Siehe Mutant Year Zero Regelbuch S.??",
+			"TakeCover"					: "Siehe Mutant Year Zero Regelbuch S.??",
+			"Dodge"						: "Siehe Mutant Year Zero Regelbuch S.??",
+			"Parry"						: "Siehe Mutant Year Zero Regelbuch S.??",
+			"BreakFree"					: "Siehe Mutant Year Zero Regelbuch S.??",
+			"Chase"						: "Siehe Mutant Year Zero Regelbuch S.??",
+			"Help"						: "Siehe Mutant Year Zero Regelbuch S.??",
+			"Hinder"					: "Siehe Mutant Year Zero Regelbuch S.??",
+			"Reload"					: "Siehe Mutant Year Zero Regelbuch S.??",
+			"Defend"					: "Siehe Mutant Year Zero Regelbuch S.??"
 		},
 		
 		"Settings" : {
-			"TreatType" : {
-				"name"					: "Behandeln Typ",
-				"descrp"				: "Welche art von Behandlung gewürfelt werden soll, wenn der Aktions Knopf gedrückt wird"
+			"ConsumeReourcePoints" : {
+				"name"					: "Verbrauche Resourcen Punkte",
+				"descrp"				: "Ob Resourcen Punkte beim Einsatz von Fertigkeiten verbraucht werden sollen"				
+			},
+			"ConsumeReourcePoints" : {
+				"name"					: "Verbrauche Kugeln",
+				"descrp"				: "Ob Kugeln beim Einsatz von Fernkampfwaffen verbraucht werden sollen"				
 			},
 			"ShowTalents" : {
 				"name"					: "Zeige Talente Knopf",
@@ -49,8 +61,8 @@
 		}
 	},
 	
-    "enhancedcombathud.themeOptions.mainAction" : "Farben langsame Aktion",
-    "enhancedcombathud.themeOptions.bonusAction" : "Farben schnelle Aktion",
-    "enhancedcombathud.themeOptions.freeAction" : "Nicht von Argon Vaesen genutzt",
+    "enhancedcombathud.themeOptions.mainAction" : "Farben Aktion",
+    "enhancedcombathud.themeOptions.bonusAction" : "Farben Maneuver",
+    "enhancedcombathud.themeOptions.freeAction" : "Nicht von Argon MYZ genutzt",
     "enhancedcombathud.themeOptions.reaction" : "Farben Reaktion"
 }
