--- a/lang/en.json
+++ b/lang/en.json
@@ -64,7 +64,7 @@
 				"Title"					: "You used {AbilityName} consuming {AbilityCost} {AbilityCostName}:",
 				"Button"				: "Roll missfire"
 			},
-			"GainedXP" 					: "{Player} gained {XP} experience points:"
+			"GainedXP" 					: "{Actor} gained {XP} experience points:"
 		},
 		
 		"Settings" : {
