--- a/lang/de.json
+++ b/lang/de.json
@@ -41,22 +41,22 @@
 		},
 		
 		"Descriptions" : {
-			"Flee"						: "Siehe Mutant Year Zero Regelbuch S.??",
+			"Flee"						: "Fluchtversuch aus dem Kampf (benötigt einen Bewegungswurf)",
 			"WPG"						: "Siehe Mutant Year Zero Regelbuch S.??",
 			"Survey"					: "Siehe Mutant Year Zero Regelbuch S.??",
 			"TreatInjuries"				: "Siehe Mutant Year Zero Regelbuch S.??",
-			"DrawWeapon"				: "Siehe Mutant Year Zero Regelbuch S.??",
-			"Standup"					: "Siehe Mutant Year Zero Regelbuch S.??",
-			"Move"						: "Siehe Mutant Year Zero Regelbuch S.??",
-			"TakeCover"					: "Siehe Mutant Year Zero Regelbuch S.??",
+			"DrawWeapon"				: "Eine Waffe ziehen",
+			"Standup"					: "Vom Boden aufstehen",
+			"Move"						: "Bewegung (Vorrücken/Rückzug)",
+			"TakeCover"					: "In Deckung gehen",
 			"Dodge"						: "Siehe Mutant Year Zero Regelbuch S.??",
 			"Parry"						: "Siehe Mutant Year Zero Regelbuch S.??",
-			"BreakFree"					: "Siehe Mutant Year Zero Regelbuch S.??",
+			"BreakFree"					: "Versuch sich aus dem Griff zu befreien (benötigt einen Kampfwurf)",
 			"Chase"						: "Siehe Mutant Year Zero Regelbuch S.??",
-			"Help"						: "Siehe Mutant Year Zero Regelbuch S.??",
-			"Hinder"					: "Siehe Mutant Year Zero Regelbuch S.??",
-			"Reload"					: "Siehe Mutant Year Zero Regelbuch S.??",
-			"Defend"					: "Siehe Mutant Year Zero Regelbuch S.??",
+			"Help"						: "Einem anderen Charakter helfen",
+			"Hinder"					: "Einen anderen Charakter behindern",
+			"Reload"					: "Eine Waffe nachladen",
+			"Defend"					: "Gegen einen Angriff verteidigen (benötigt einen Kampfwurf)",
 			"Skills"					: "Öffnet/schließt das Attribute & Fertigkeiten Menu"
 		},
 		
