--- a/lang/en.json
+++ b/lang/en.json
@@ -41,22 +41,22 @@
 		},
 		
 		"Descriptions" : {
-			"Flee"						: "See Mutant Year Zero core rules book p.??",
+			"Flee"						: "Attempting to flee combat (requires a Move roll)",
 			"WPG"						: "See Mutant Year Zero core rules book p.??",
 			"Survey"					: "See Mutant Year Zero core rules book p.??",
 			"TreatInjuries"				: "See Mutant Year Zero core rules book p.??",
-			"DrawWeapon"				: "See Mutant Year Zero core rules book p.??",
-			"Standup"					: "See Mutant Year Zero core rules book p.??",
-			"Move"						: "See Mutant Year Zero core rules book p.??",
-			"TakeCover"					: "See Mutant Year Zero core rules book p.??",
+			"DrawWeapon"				: "Drawing a weapon",
+			"Standup"					: "Getting up from being prone",
+			"Move"						: "Moving (advancing/retreating)",
+			"TakeCover"					: "Taking cover",
 			"Dodge"						: "See Mutant Year Zero core rules book p.??",
 			"Parry"						: "See Mutant Year Zero core rules book p.??",
-			"BreakFree"					: "See Mutant Year Zero core rules book p.??",
+			"BreakFree"					: "Attempting to break grapple (requires a Fight roll)",
 			"Chase"						: "See Mutant Year Zero core rules book p.??",
-			"Help"						: "See Mutant Year Zero core rules book p.??",
-			"Hinder"					: "See Mutant Year Zero core rules book p.??",
-			"Reload"					: "See Mutant Year Zero core rules book p.??",
-			"Defend"					: "See Mutant Year Zero core rules book p.??",
+			"Help"						: "Helping another character",
+			"Hinder"					: "Hindering another character",
+			"Reload"					: "Reloading a weapon",
+			"Defend"					: "Defending against an attack (requires a Fight roll)",
 			"Skills"					: "Opens/closes the Attributes & Skills menu"
 		},
 		
