--- a/lang/fr.json
+++ b/lang/fr.json
@@ -41,22 +41,22 @@
 		},
 		
 		"Descriptions" : {
-			"Flee"						: "See Mutant Year Zero core rules book p.??",
-			"WPG"						: "See Mutant Year Zero core rules book p.??",
-			"Survey"					: "See Mutant Year Zero core rules book p.??",
-			"TreatInjuries"				: "See Mutant Year Zero core rules book p.??",
-			"DrawWeapon"				: "See Mutant Year Zero core rules book p.??",
-			"Standup"					: "See Mutant Year Zero core rules book p.??",
-			"Move"						: "See Mutant Year Zero core rules book p.??",
-			"TakeCover"					: "See Mutant Year Zero core rules book p.??",
-			"Dodge"						: "See Mutant Year Zero core rules book p.??",
-			"Parry"						: "See Mutant Year Zero core rules book p.??",
-			"BreakFree"					: "See Mutant Year Zero core rules book p.??",
-			"Chase"						: "See Mutant Year Zero core rules book p.??",
-			"Help"						: "See Mutant Year Zero core rules book p.??",
-			"Hinder"					: "See Mutant Year Zero core rules book p.??",
-			"Reload"					: "See Mutant Year Zero core rules book p.??",
-			"Defend"					: "See Mutant Year Zero core rules book p.??",
+			"Flee"						: "Tentative de fuite du combat (nécessite un jet de Mouvement)",
+			"WPG"						: "Voir livre de règles de base Mutant Year Zero p.??",
+			"Survey"					: "Voir livre de règles de base Mutant Year Zero p.??",
+			"TreatInjuries"				: "Voir livre de règles de base Mutant Year Zero p.??",
+			"DrawWeapon"				: "Dégainer une arme",
+			"Standup"					: "Se relever de la position couchée",
+			"Move"						: "Mouvement (avancer/reculer)",
+			"TakeCover"					: "Se mettre à couvert",
+			"Dodge"						: "Voir livre de règles de base Mutant Year Zero p.??",
+			"Parry"						: "Voir livre de règles de base Mutant Year Zero p.??",
+			"BreakFree"					: "Tentative de se libérer d'une prise (nécessite un jet de Combat)",
+			"Chase"						: "Voir livre de règles de base Mutant Year Zero p.??",
+			"Help"						: "Aider un autre personnage",
+			"Hinder"					: "Gêner un autre personnage",
+			"Reload"					: "Recharger une arme",
+			"Defend"					: "Se défendre contre une attaque (nécessite un jet de Combat)",
 			"Skills"					: "Opens/closes the Attributes & Skills menu"
 		},
 		
